# ddgregoai

./: .gitignore  README.md  SKILL.md  pyproject.toml
config/: config.json.example
docs/: COMPLETE.md  LOGIN.md  REGISTER.md  VERIFY.md
scripts/: README.md  __init__.py  api.py  callback_server.py  cleanup_accounts.py  config.py  playwright_register.py  setup.py  state.py  verify_accounts.py
